--- a/test.html
+++ b/test.html
@@ -5,28 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FITCODE</title>
-    <link rel="icon" href="./img/logo.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./src/styles/style.css"/>
-    <link rel="stylesheet" href="./src/styles/loginStyle.css"/>
-    <link rel="stylesheet" href="./src/styles/sidebarStyle.css"/>
+    <link rel="icon" href="/logo_color.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/styles/style.css" />
+    <link rel="stylesheet" href="./src/styles/loginStyle.css" />
     <link rel="stylesheet" href="./src/styles/cardInfoStyle.css" />
     <link rel="stylesheet" href="./src/styles/cardActivity.css" />
     <link rel="stylesheet" href="./src/styles/cardQuickAction.css" />
     <link rel="stylesheet" href="./src/styles/cardNextSession.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" />
-    <script src="./framework/tailwind-3.4.17.js"></script>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-    <div id="fitcode"></div>
-    
+    <div id="fitcode1">
+
+    </div>
+
     <script src="./src/views/login.js" type="module"></script>
     <script src="./src/views/index.js" type="module"></script>
     <script src="./src/views/sidebar.js" type="module"></script>
     <script src="./src/views/mainContent.js" type="module"></script>
-    <script src="./src/views/dashboard.js" type="module"></script>
 </body>
 
 </html>
