agregado asignación de plan

--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
     <link rel="stylesheet" href="./src/styles/style.css" />
     <link rel="stylesheet" href="./src/styles/comboBox.css" />
     <link rel="stylesheet" href="./src/styles/switch.css" />
+    <link rel="stylesheet" href="./src/styles/datePicker.css" />
+    <link rel="stylesheet" href="./src/styles/inputSuggestion.css" />
     <link rel="stylesheet" href="./src/styles/loginStyle.css" />
     <link rel="stylesheet" href="./src/styles/sidebarStyle.css" />
+    <link rel="stylesheet" href="./src/styles/plan.css" />
+    <link rel="stylesheet" href="./src/styles/assignment.css" />
+    <link rel="stylesheet" href="./src/styles/progressBar.css" />
     <link rel="stylesheet" href="./src/styles/cardInfoStyle.css" />
     <link rel="stylesheet" href="./src/styles/cardActivity.css" />
     <link rel="stylesheet" href="./src/styles/cardQuickAction.css" />
     <link rel="stylesheet" href="./src/styles/cardNextSession.css" />
     <link rel="stylesheet" href="./src/styles/cardPlan.css" />
+    <link rel="stylesheet" href="./src/styles/cardAssignment.css" />
     <link rel="stylesheet" href="./src/styles/modalPlanDetail.css" />
     <link rel="stylesheet" href="./src/styles/modalPlanNew.css" />
+    <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet"
@@ -36,6 +43,7 @@
     <script src="./src/views/plans.js" type="module"></script>
     <script src="./src/views/modalPlanDetail.js" type="module"></script>
     <script src="./src/views/modalPlanNew.js" type="module"></script>
+    <script src="./src/views/assignment.js" type="module"></script>
 </body>
 
 </html>
