--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./src/styles/sidebarStyle.css" />
     <link rel="stylesheet" href="./src/styles/plan.css" />
     <link rel="stylesheet" href="./src/styles/assignment.css" />
+    <link rel="stylesheet" href="./src/styles/statistics.css" />
     <link rel="stylesheet" href="./src/styles/progressBar.css" />
     <link rel="stylesheet" href="./src/styles/cardInfoStyle.css" />
     <link rel="stylesheet" href="./src/styles/cardActivity.css" />
@@ -25,11 +26,13 @@
     <link rel="stylesheet" href="./src/styles/modalPlanDetail.css" />
     <link rel="stylesheet" href="./src/styles/modalPlanNew.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
+    <link rel="stylesheet" href="./src/styles/modalStatics.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" />
     <script src="./framework/tailwind-3.4.17.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
 <body>
@@ -39,11 +42,6 @@
     <script src="./src/views/index.js" type="module"></script>
     <script src="./src/views/sidebar.js" type="module"></script>
     <script src="./src/views/mainContent.js" type="module"></script>
-    <script src="./src/views/dashboard.js" type="module"></script>
-    <script src="./src/views/plans.js" type="module"></script>
-    <script src="./src/views/modalPlanDetail.js" type="module"></script>
-    <script src="./src/views/modalPlanNew.js" type="module"></script>
-    <script src="./src/views/assignment.js" type="module"></script>
 </body>
 
 </html>
