--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./src/styles/loginStyle.css" />
     <link rel="stylesheet" href="./src/styles/sidebarStyle.css" />
     <link rel="stylesheet" href="./src/styles/plan.css" />
+    <link rel="stylesheet" href="./src/styles/planCreate.css" />
     <link rel="stylesheet" href="./src/styles/assignment.css" />
     <link rel="stylesheet" href="./src/styles/statistics.css" />
     <link rel="stylesheet" href="./src/styles/progressBar.css" />
@@ -24,7 +25,7 @@
     <link rel="stylesheet" href="./src/styles/cardPlan.css" />
     <link rel="stylesheet" href="./src/styles/cardAssignment.css" />
     <link rel="stylesheet" href="./src/styles/modalPlanDetail.css" />
-    <link rel="stylesheet" href="./src/styles/modalPlanNew.css" />
+
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
