Modelado de la página Usuarios (provisoria), le faltan funcionalidades de añadir alumno y filtrado.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./src/styles/cardPlan.css" />
     <link rel="stylesheet" href="./src/styles/cardAssignment.css" />
     <link rel="stylesheet" href="./src/styles/modalPlanDetail.css" />
-
+    <link rel="stylesheet" href="./src/styles/modalUser.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
