Implementada la pantalla de Ejercicios, con modal de agregar, editar y eliminar (aunque no los probé bien al de edit y eliminar).

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="./src/styles/modalUser.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
+    <link rel="stylesheet" href="./src/styles/exercise.css" />
+    <link rel="stylesheet" href="./src/styles/modalExercise.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet"
