Agregada la lógica para renderizar métricas y gráficos en la pantalla de estadísticas

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" />
     <script src="./framework/tailwind-3.4.17.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
