--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./src/styles/sidebarStyle.css" />
     <link rel="stylesheet" href="./src/styles/plan.css" />
     <link rel="stylesheet" href="./src/styles/planCreate.css" />
+    <link rel="stylesheet" href="./src/styles/planView.css" />
     <link rel="stylesheet" href="./src/styles/assignment.css" />
     <link rel="stylesheet" href="./src/styles/statistics.css" />
     <link rel="stylesheet" href="./src/styles/progressBar.css" />
@@ -24,10 +25,10 @@
     <link rel="stylesheet" href="./src/styles/cardNextSession.css" />
     <link rel="stylesheet" href="./src/styles/cardPlan.css" />
     <link rel="stylesheet" href="./src/styles/cardAssignment.css" />
-    <link rel="stylesheet" href="./src/styles/modalPlanDetail.css" />
     <link rel="stylesheet" href="./src/styles/modalUser.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
+    <link rel="stylesheet" href="./src/styles/modalNotice.css" />
     <link rel="stylesheet" href="./src/styles/exercise.css" />
     <link rel="stylesheet" href="./src/styles/modalExercise.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
