se agrego el css para la ventana modal de consulta y para la pagina de pagos

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
     <link rel="stylesheet" href="./src/styles/modalNotice.css" />
+    <link rel="stylesheet" href="./src/styles/modalQuery.css" />
     <link rel="stylesheet" href="./src/styles/exercise.css" />
     <link rel="stylesheet" href="./src/styles/modalExercise.css" />
+    <link rel="stylesheet" href="./src/styles/payment.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet"
