Modificaciones en la pantalla de Alumnos, mejorado el estilado y eliminados los modales de new y edit. New y Edit ahora están separadas en otras pantallas.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="./src/styles/cardNextSession.css" />
     <link rel="stylesheet" href="./src/styles/cardPlan.css" />
     <link rel="stylesheet" href="./src/styles/cardAssignment.css" />
+    <link rel="stylesheet" href="./src/styles/user.css" />
+    <link rel="stylesheet" href="./src/styles/userNew.css" />
     <link rel="stylesheet" href="./src/styles/modalUser.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
