--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="./src/styles/exercise.css" />
     <link rel="stylesheet" href="./src/styles/modalExercise.css" />
     <link rel="stylesheet" href="./src/styles/payment.css" />
+    <link rel="stylesheet" href="./src/styles/toast.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet"
