--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./src/styles/cardAssignment.css" />
     <link rel="stylesheet" href="./src/styles/user.css" />
     <link rel="stylesheet" href="./src/styles/userNew.css" />
+    <link rel="stylesheet" href="./src/styles/userEdit.css" />
     <link rel="stylesheet" href="./src/styles/modalUser.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
