feat: Se completo la vista de asignacion

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="./src/styles/userEdit.css" />
     <link rel="stylesheet" href="./src/styles/modalUser.css" />
     <link rel="stylesheet" href="./src/styles/modalAssignmentNew.css" />
+    <link rel="stylesheet" href="./src/styles/assignmentNew.css" />
     <link rel="stylesheet" href="./src/styles/modalStatics.css" />
     <link rel="stylesheet" href="./src/styles/modalNotice.css" />
     <link rel="stylesheet" href="./src/styles/modalQuery.css" />
