Se agrego el css para la edicion del plan

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./src/styles/plan.css" />
     <link rel="stylesheet" href="./src/styles/planCreate.css" />
     <link rel="stylesheet" href="./src/styles/planView.css" />
+    <link rel="stylesheet" href="./src/styles/planEdit.css" />
     <link rel="stylesheet" href="./src/styles/assignment.css" />
     <link rel="stylesheet" href="./src/styles/statistics.css" />
     <link rel="stylesheet" href="./src/styles/progressBar.css" />
